--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -18,3 +18,6 @@ Good enough cabinets for switches and routers are pretty expensive. A good one I
 | Cables | 9,90 € | 5  | 49,50 € |
 | Cabinet | 1224,90 € | 1 | 1224,90 € |
 |||| **Total = 3614 €**|
+
+## Topology
+![](documentation/E06/Topologies-EX6_topo.drawio.png)
