--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -2,7 +2,8 @@
 
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
-[verkkokauppa link](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
+
+[Verkkokauppa link](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
 I will use copies of my laptop as the PCs/end hosts. Each costs 700€.
 
