--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -5,7 +5,9 @@ I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. C
 
 [Verkkokauppa link](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
-I will use copies of my laptop as the PCs/end hosts. Each costs 700€.
+I need end devices with RJ-45 ports. I will use this Thinkpad laptop for the purpose. Quite expensive but more than enough for the job
+
+[Verkkokauppa link](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
 For cabling I need simple RJ-45 cables that are long enough. They are 9,90€ each.
 
