--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -5,7 +5,7 @@ I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. C
 
 [Verkkokauppa link](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
-I need end devices with RJ-45 ports in order for me to connect them to the . I will use this Thinkpad laptop for the purpose. Quite expensive but more than enough for the job
+I need end devices with RJ-45 ports in order for me to connect them to the switches/routers. I will use three of these Thinkpad laptops for the purpose. Quite expensive but more than enough for the job.
 
 [Verkkokauppa link](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
