--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -1,7 +1,7 @@
 # Documentation for E06
 
 ## Notes
-I will be using [Verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as it is easily available.
+I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as it is easily available.
 
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
