--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -6,11 +6,11 @@ I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to f
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
 
-[Verkkokauppa link](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
+[RouterBOARD](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
 I need end devices with RJ-45 ports in order for me to connect them to the switches/routers. I will use three of these Thinkpad laptops for the purpose. Quite expensive but more than enough for the job.
 
-[Verkkokauppa link](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
+[ThinkPad](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
 For cabling I need simple RJ-45 cables that are long enough. They are 9,90€ each.
 
