--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -12,7 +12,9 @@ I need end devices with RJ-45 ports in order for me to connect them to the switc
 
 [ThinkPad](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
-For cabling I need simple RJ-45 cables that are long enough. They are 9,90€ each.
+For cabling I need simple RJ-45 cables that are around 1 meters long. They are 9,99€ each.
+
+[GooBay cable](https://www.verkkokauppa.com/fi/product/11586/Goobay-CAT6-U-UTP-verkkokaapeli-1-m-harmaa)
 
 ## Machine housing
 Good enough cabinets for switches and routers are pretty expensive. A good one I picked is 1224,90€.
