--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -4,7 +4,7 @@
 I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as it is easily available.
 
 ## Cables and devices
-I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
+I will be using MikroTik's RouterBOARD hex-routers as my switches and routers.
 
 [RouterBOARD](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
@@ -12,7 +12,7 @@ I need end devices with RJ-45 ports in order for me to connect them to the switc
 
 [ThinkPad](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
-For cabling I need simple RJ-45 cables that are around 1 meters long. They are 9,99€ each.
+For cabling I need simple RJ-45 cables. They are around 1 meters long and enough to connect devices to each other in the cabinet.
 
 [GooBay cable](https://www.verkkokauppa.com/fi/product/11586/Goobay-CAT6-U-UTP-verkkokaapeli-1-m-harmaa)
 
