--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -12,9 +12,9 @@ I need end devices with RJ-45 ports in order for me to connect them to the switc
 
 [ThinkPad](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
-For cabling I need simple RJ-45 cables. They are 1 meter long and enough to connect devices to each other in the cabinet.
+For cabling I need simple RJ-45 cables. They are 3 meters long and enough to connect devices to each other in the cabinet.
 
-[GooBay cable](https://www.verkkokauppa.com/fi/product/11586/Goobay-CAT6-U-UTP-verkkokaapeli-1-m-harmaa)
+[Deltaco cable](https://www.verkkokauppa.com/fi/product/82359/DELTACO-Cat7-F-UTP-laitekaapeli-2-m-harmaa)
 
 ## Machine housing
 Good enough cabinets for switches and routers are pretty expensive. A good one I picked is 1224,90€.
