--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -17,7 +17,9 @@ For cabling I need simple RJ-45 cables. They are 3 meters long and enough to con
 [Deltaco cable](https://www.verkkokauppa.com/fi/product/82359/DELTACO-Cat7-F-UTP-laitekaapeli-2-m-harmaa)
 
 ## Machine housing
-Good enough cabinets for switches and routers are pretty expensive. A good one I picked is 1224,90€.
+A cabinet roomy enough for the setup and has good airflow.
+
+[APC cabinet](https://www.verkkokauppa.com/fi/product/694409/APC-NetShelter-SX-12U-rakkikaappi)
 
 ## Budget table
 | Item | Price | Quantity | Total |
