--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -1,7 +1,7 @@
 # Documentation for E06
 
 ## Notes
-I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as it is easily available. Shipping is free of charge for a purchase this big.
+I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as the site is easily available and has all the items in stock. Shipping is free of charge for a purchase this big.
 
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers.
