--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -24,10 +24,10 @@ A cabinet roomy enough for the setup and has good airflow.
 ## Budget table
 | Item | Price | Quantity | Total |
 | :--- | :--- | :--- | :--- |
-| Switches, routers | 59,90 € | 4 | 239,60 € |
-| End hosts | 1745,90 € | 3 | 5237,70 € |
-| Cables | 9,99 € | 6 | 59,94 € |
-| Cabinet | 1043,90 € | 1 | 1043,90 € |
+| MikroTik RouterBOARD hEX | 59,90 € | 4 | 239,60 € |
+| Lenovo ThinkPad P14s Gen 2 | 1745,90 € | 3 | 5237,70 € |
+| DELTACO Cat7 F/UTP | 9,99 € | 6 | 59,94 € |
+| APC NetShelter SX 12U | 1043,90 € | 1 | 1043,90 € |
 |||| **Total = 6581,14 €**|
 
 ## Topology
