--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -23,7 +23,7 @@ A cabinet roomy enough for the setup and has good airflow. The cabinet itself do
 
 [Mounting kit](https://www.verkkokauppa.com/fi/product/688642/APC-NetShelter-CX-Mini-12U-Vertical-Mounting-Rail-Kit-rakkia/lisatiedot)
 
-[Manufacturer site with more info](https://www.apc.com/shop/us/en/products/APC-NetShelter-CX-Mounting-Rail-Kit-Vertical-Black-536H-x-120W-x-56D-mm/P-AR4000MV12U)
+**[Manufacturer site with more info](https://www.apc.com/shop/us/en/products/APC-NetShelter-CX-Mounting-Rail-Kit-Vertical-Black-536H-x-120W-x-56D-mm/P-AR4000MV12U)**
 
 
 ## Budget table
