--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -32,6 +32,7 @@ A cabinet roomy enough for the setup and has good airflow. The cabinet itself do
 | Lenovo ThinkPad P14s Gen 2 | 1745,90 € | 3 | 5237,70 € |
 | DELTACO Cat7 F/UTP | 9,99 € | 6 | 59,94 € |
 | APC NetShelter SX 12U | 1043,90 € | 1 | 1043,90 € |
+| APC NetShelter Mounting Rail Kit | 230,90 € | 1 | 230,90 € |
 |||| **Total = 6581,14 €**|
 
 ## Topology
