--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -29,10 +29,10 @@ A cabinet roomy enough for the setup and has good airflow. The cabinet itself do
 | Item | Usage | Price | Quantity | Total |
 | :--- | :--- | :--- | :--- |
 | MikroTik RouterBOARD hEX | Switch and router | 59,90 € | 4 | 239,60 € |
-| Lenovo ThinkPad P14s Gen 2 / End device || 1745,90 € | 3 | 5237,70 € |
-| DELTACO Cat7 F/UTP / Cabling || 9,99 € | 6 | 59,94 € |
-| APC NetShelter SX 12U / Cabinet || 1043,90 € | 1 | 1043,90 € |
-| APC NetShelter Mounting Rail Kit / Mounting hardware || 230,90 € | 1 | 230,90 € |
+| Lenovo ThinkPad P14s Gen 2 | End device | 1745,90 € | 3 | 5237,70 € |
+| DELTACO Cat7 F/UTP | Cabling | 9,99 € | 6 | 59,94 € |
+| APC NetShelter SX 12U | Cabinet | 1043,90 € | 1 | 1043,90 € |
+| APC NetShelter Mounting Rail Kit| Mounting hardware | 230,90 € | 1 | 230,90 € |
 |||| **Total = 6812,04 €**|
 
 ## Topology
