--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -33,7 +33,7 @@ A cabinet roomy enough for the setup and has good airflow. The cabinet itself do
 | DELTACO Cat7 F/UTP | Cabling | 9,99 € | 6 | 59,94 € |
 | APC NetShelter SX 12U | Cabinet | 1043,90 € | 1 | 1043,90 € |
 | APC NetShelter Mounting Rail Kit| Mounting hardware | 230,90 € | 1 | 230,90 € |
-|||| **Total = 6812,04 €**|
+||||| **Total = 6812,04 €**|
 
 ## Topology
 ![](documentation/E06/Topologies-EX6_topo.drawio.png)
