--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -4,7 +4,7 @@
 I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to find my equipment as the site is easily available and has all the items in stock. Shipping is free of charge for a purchase this big.
 
 ## Cables and devices
-I will be using MikroTik's RouterBOARD hex-routers as my switches and routers.
+I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. It has 5 ethernet ports so enough for my setup.
 
 [RouterBOARD](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
