--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -6,22 +6,22 @@ I will be using [verkkokauppa.com](https://www.verkkokauppa.com/fi/etusivu) to f
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. It has 5 ethernet ports so enough for my setup.
 
-[RouterBOARD](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
+[MikroTik RouterBOARD hEX - router](https://www.verkkokauppa.com/fi/product/739921/MikroTik-RouterBOARD-hEX-reititin)
 
 I need end devices with RJ-45 ports in order for me to connect them to the switches/routers. I will use three of these Thinkpad laptops for the purpose. Quite expensive but more than enough for the job.
 
-[ThinkPad](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
+[Lenovo ThinkPad P14s Gen 2 - laptop](https://www.verkkokauppa.com/fi/product/762391/Lenovo-ThinkPad-P14s-Gen-2-14-kannettava-Win-10-Pro-21A0004R)
 
 For cabling I need simple RJ-45 cables. They are 3 meters long and enough to connect devices to each other in the cabinet.
 
-[Deltaco cable](https://www.verkkokauppa.com/fi/product/82359/DELTACO-Cat7-F-UTP-laitekaapeli-2-m-harmaa)
+[DELTACO Cat7 F/UTP - cable](https://www.verkkokauppa.com/fi/product/82359/DELTACO-Cat7-F-UTP-laitekaapeli-2-m-harmaa)
 
 ## Machine housing
 A cabinet roomy enough for the setup and has good airflow. The cabinet itself does not have any installation methods for devices so i have to get a mounting kit. The kit includes mounting hardware.
 
-[APC cabinet](https://www.verkkokauppa.com/fi/product/694409/APC-NetShelter-SX-12U-rakkikaappi)
+[APC NetShelter SX 12U - cabinet](https://www.verkkokauppa.com/fi/product/694409/APC-NetShelter-SX-12U-rakkikaappi)
 
-[Mounting kit](https://www.verkkokauppa.com/fi/product/688642/APC-NetShelter-CX-Mini-12U-Vertical-Mounting-Rail-Kit-rakkia/lisatiedot)  
+[APC NetShelter Mounting Rail Kit](https://www.verkkokauppa.com/fi/product/688642/APC-NetShelter-CX-Mini-12U-Vertical-Mounting-Rail-Kit-rakkia/lisatiedot)  
 **[Manufacturer site with more info](https://www.apc.com/shop/us/en/products/APC-NetShelter-CX-Mounting-Rail-Kit-Vertical-Black-536H-x-120W-x-56D-mm/P-AR4000MV12U)**
 
 
