--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -17,7 +17,7 @@ For cabling I need simple RJ-45 cables. They are 3 meters long and enough to con
 [DELTACO Cat7 F/UTP - cable](https://www.verkkokauppa.com/fi/product/82359/DELTACO-Cat7-F-UTP-laitekaapeli-2-m-harmaa)
 
 ## Machine housing
-This cabinet is spacious enough for the setup and has good airflow. The cabinet itself does not have any installation methods for devices so i have to get a mounting kit. The kit includes mounting hardware.
+This cabinet is spacious enough for the setup and has good airflow. The cabinet itself does not have any installation methods for devices so i have to get a mounting kit. The kit includes mounting hardware like screws etc.
 
 [APC NetShelter SX 12U - cabinet](https://www.verkkokauppa.com/fi/product/694409/APC-NetShelter-SX-12U-rakkikaappi)
 
